fix unwanted text wrapping in the header in ie11

--- a/server/sonar-web/src/main/js/app/components/nav/global/GlobalNav.css
+++ b/server/sonar-web/src/main/js/app/components/nav/global/GlobalNav.css
@@ -19,6 +19,7 @@
 
 .navbar-login {
   margin-right: -10px;
+  white-space: nowrap;
 }
 
 .navbar-avatar {
